2008-04-01  Arnim Laeuger  <arniml@users.sourceforge.net>

   [ 1887221 ] Add configure switch to disable all cable&parport drivers:
   * doc/UrJTAG.txt: updates for new options and summary reporting
   * src/tap/parport.c: reworked driver referencing based on
     ENABLE_PARPORT_* macros
   * src/tap/cable.c: reworked driver referencing based on
     ENABLE_CABLE_* macros
   * src/tap/Makefile.am (libtap_a_SOURCES): include sources based on
     ENABLE_CABLE_* and ENABLE_PARPORT_* macros
   * src/bus/buses.c: reference bus drivers based on ENABLE_BUS_* macros
   * src/bus/buses.h: sorted sequence of extern declarations
   * src/bus/Makefile.am (libbus_a_SOURCES): include sources based on
     ENABLE_BUS_* macros
   * src/Makefile.am (jtag_LDADD): moved -lcmd to top of list to prevent
     linker error for --enable-cable=jim
   * configure.ac: added switches --enable-bus, --enable-cable and enable-parport
     removed (superseeded) --enable-jim and --enable-ep9307

2008-03-26  Kolja Waschk <kawk>

   * src/flash/amd.c: Fix address shift (Jeff Wittrock)

2008-03-15  Jie Zhang  <jie.zhang@analog.com>

   * include/jtag.h (jtag_parse_line): Declare.
     (jtag_parse_stream): Declare.
   * src/discovery.c: Move ...
   * src/tap/discovery.c: ... here.
   * src/detect.c: Move ...
   * src/tap/detect.c: ... here.
   * src/tap/Makefile.am (libtap_a_SOURCES): Add detect.c and
       discovery.c.
   * src/readmem.c: Move ...
   * src/bus/readmem.c: ... here.
   * src/writemem.c: Move ...
   * src/bus/writemem.c: ... here.
   * src/bus/Makefile.am (libbus_a_SOURCES): Add readmem.c and
       writemem.c.
   * src/flash.c: Move ...
   * src/flash/flash.c: ... here.
   * src/flash/Makefile.am (libflash_a_SOURCES): Add flash.c.
   * src/jtag.c (get_token, jtag_parse_line, jtag_parse_stream,
     jtag_parse_file): Move to ...
   * src/cmd/parse.c: ... here.
   * src/cmd/Makefile.am (libbus_a_SOURCES): Add parse.c.
   * src/Makefile.am (jtag_SOURCES): Remove detect.c, discovery.c,