@@ -31,6 +31,8 @@
 #include "state.h"
 #include "tap.h"
 
+#include "bsdl.h"
+
 chain_t *
 chain_alloc( void )
 {
@@ -41,6 +43,7 @@ chain_alloc( void )
 	chain->cable = NULL;
 	chain->parts = NULL;
 	chain->active_part = 0;
+	BSDL_GLOBS_INIT(chain->bsdl);
 	tap_state_init( chain );
 
 	return chain;
